--- a/mod.yml
+++ b/mod.yml
@@ -1,6 +1,6 @@
-title: Halloween Sora Everywhere
+title: Base Sora Everywhere
 originalAuthor: dallin1016
-description: Changes every (human) Instance of Sora to his Halloween Outfit. Icon by MasterLeytrx.
+description: Changes every (human) Instance of Sora to his Base Outfit.
 assets:
 #- name: 00objentry.bin
 #  method: copy
